<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <!-- Question One -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/questionOne" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answerOneA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerOneA"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerOneB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerOneB"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerOneC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerOneC"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerOneD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerOneD"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <!-- Question two -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:text="@string/questionTwo" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answerTwoA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerTwoA"
                android:textColor="#485d79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerTwoB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerTwoB"
                android:textColor="#FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerTwoC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerTwoC"
                android:textColor="#FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerTwoD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerTwoD"
                android:textColor="#FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <!-- Question 3 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:text="@string/questionThree" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answerThreeA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerThreeA"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerThreeB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerThreeB"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerThreeC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerThreeC"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerThreeD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerThreeD"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <!-- Question 4. Multiple right answers. -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:text="@string/questionFour" />

        <CheckBox
            android:id="@+id/answerFourA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/answerFourA"
            android:textColor="FF485D79"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/answerFourB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/answerFourB"
            android:textColor="FF485D79"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/answerFourC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/answerFourC"
            android:textColor="FF485D798"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/answerFourD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/answerFourD"
            android:textColor="FF485D79"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Question 5 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:text="@string/questionFive" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answerFiveA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerFiveA"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerFiveB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerFiveB"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerFiveC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerFiveC"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerFiveD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerFiveD"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <!-- Question 6 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:text="@string/questionSix" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answerSixA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSixA"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerSixB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSixB"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerSixC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSixC"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerSixD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerThreeD"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <!-- Question 7-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:text="@string/questionSeven" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answerSevenA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSevenA"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerSevenB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSevenB"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerSevenC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSevenC"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerSevenD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSevenD"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <!-- Question 8 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:text="@string/questionEight" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answerEightA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerEightA"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerEightB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerEightB"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerEightC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerEightC"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerEightD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerEightD"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <!-- Question 9 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:text="@string/questionNine" />

        <EditText
            android:id="@+id/answerNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Type answer"
            android:inputType="textCapWords" />

        <!-- Question 10 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:text="@string/questionTen" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answerTenA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerTenA"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerTenB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerTenB"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerTenC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerTenC"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerTenD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerTenD"
                android:textColor="FF485D79"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>


    </LinearLayout>
</ScrollView>